better grades and scores

--- a/public/new-assignment.html
+++ b/public/new-assignment.html
@@ -83,33 +83,33 @@
               <input type="checkbox" onchange="selectAllTopicsChange(event)">
               <label>Topics</label>
               <label>Weight</label>
-              <label>Frequency</label>
-              <label>Grade</label>
-              <label>Score</label>
+              <label style="text-align: right;">Frequency</label>
+              <label style="text-align: right;">Grade</label>
+              <label style="text-align: right;">Score</label>
             </div>
             <div id="mathTopics">
               <input type="checkbox" onchange="selectAllTopicsChange(event)">
               <label>Topics</label>
               <label>Weight</label>
-              <label>Frequency</label>
-              <label>Grade</label>
-              <label>Score</label>
+              <label style="text-align: right;">Frequency</label>
+              <label style="text-align: right;">Grade</label>
+              <label style="text-align: right;">Score</label>
             </div>
             <div id="readingTopics">
               <input type="checkbox" onchange="selectAllTopicsChange(event)">
               <label>Topics</label>
               <label>Weight</label>
-              <label>Frequency</label>
-              <label>Grade</label>
-              <label>Score</label>
+              <label style="text-align: right;">Frequency</label>
+              <label style="text-align: right;">Grade</label>
+              <label style="text-align: right;">Score</label>
             </div>
             <div id="scienceTopics">
               <input type="checkbox" onchange="selectAllTopicsChange(event)">
               <label>Topics</label>
               <label>Weight</label>
-              <label>Frequency</label>
-              <label>Grade</label>
-              <label>Score</label>
+              <label style="text-align: right;">Frequency</label>
+              <label style="text-align: right;">Grade</label>
+              <label style="text-align: right;">Score</label>
             </div>
           </div>
 
