see all students

--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -73,6 +73,7 @@
       <h2>Users</h2>
       <input type="text" id="userSearch">
       <div id="userSearchResults"></div>
+      <button onclick="queryAllStudents()">All student</button>
 
       <!-- <h2 style="margin-bottom: 0px;">Students</h2>
       <div>
