--- a/public/free-test-taker.html
+++ b/public/free-test-taker.html
@@ -45,7 +45,7 @@
         Get a better look at the at the ACT by trying it out for yourself! Get 2 free ACT tests today with instant results.
         No paywall, No hassle, just find out exactly what you need to study to get a higher score!
       </h2>
-      <button><a href="sign-up.html">Get 2 free Tests!</a></button>
+      <a href="sign-up.html">Get 2 free Tests!</a>
     </section>
     <section id="summary">
       <h1>Worried about getting into college?</h1>
@@ -61,7 +61,7 @@
         just that - where to improve.
       </p>
       <img src="Images/test-taker-girl.jpeg" alt="worried girl">
-      <button><a href="sign-up.html">Find Out What to Study</a></button>
+      <a href="sign-up.html">Find Out What to Study</a>
     </section>
     <section id="details">
       <h1>Our Test Taker</h1>
@@ -81,9 +81,7 @@
           polygons, or maybe you're weak on reading, especially when it comes to questions about natural science! Whatever it is, 
           know right away what you're good at and what you need to work on.
         </p>
-        <video src="https://firebasestorage.googleapis.com/v0/b/lyrn-web-app.appspot.com/o/Videos%2FLyrn%20Test%20Taker%20Video%201.mp4?alt=media&token=c5fda774-9438-4ea1-9a4b-dbd70d96203d" type="video/mp4" controls>
-          Your browser does not support the video.
-        </video>
+        <img src="Images/home-page/4 - pens & pencils.png" alt="writing utensils">
         <h2>Review Answers Right Away</h2>
         <p>
           Get your scores immediately after taking your test. No paywall, no wait, not hassle, just see which answers you got 
@@ -100,7 +98,7 @@
         What are you waiting for? No paywalls and no hassle, just sign up for our free test taker today to get your 2 free ACT 
         practice tests, and find out what it's really like.
       </h3>
-      <button><a href="sign-up.html">Get 2 free Tests</a></button>
+      <a href="sign-up.html">Get 2 free Tests</a>
     </section>
   </main>
   <section id="about">
