--- a/public/pricing.html
+++ b/public/pricing.html
@@ -260,21 +260,23 @@
             </ul>
           </div>
 
+          <h3 style="text-align: center; margin-bottom: 0;">How many point would you like to improve?</h3>
+
           <div class="plans">
             <!-- 2 weeks -->
             <div class="plan-wrapper">
               <div class="title">
-                <h3>2 Weeks</h3>
-                <h4>$500</h4>
+                <h3>1 - 2 points</h3>
+                <h4>2 Weeks</h4>
               </div>
               <div class="length">
-                <h4>Guided Program</h4>
-                <h5>8 hours</h5>
+                <h4>8 hours</h4>
+                <h5>$500</h5>
               </div>
               <h4 class="start">GET STARTED TODAY!</h4>
               <div class="select">
                 <a href="tel:+13852817215">
-                  <p>Call to learn more</p>
+                  <p>Learn more</p>
                   <p>(385) 281-7215</p>
                 </a>
               </div>
@@ -283,17 +285,17 @@
             <!-- 4 weeks -->
             <div class="plan-wrapper coming-soon" data-comingSoon="Save $100">
               <div class="title">
-                <h3>4 Weeks</h3>
-                <h4>$900</h4>
+                <h3>2 - 3 points</h3>
+                <h4>4 Weeks</h4>
               </div>
               <div class="length">
-                <h4>Guided Program</h4>
-                <h5>16 hours</h5>
+                <h4>16 hours</h4>
+                <h5>$900</h5>
               </div>
               <h4 class="start">GET STARTED TODAY!</h4>
               <div class="select">
                 <a href="tel:+13852817215">
-                  <p>Call to learn more</p>
+                  <p>Learn more</p>
                   <p>(385) 281-7215</p>
                 </a>
               </div>
@@ -302,17 +304,17 @@
             <!-- 6 weeks -->
             <div class="plan-wrapper coming-soon" data-comingSoon="Save $300">
               <div class="title">
-                <h3>6 Weeks</h3>
-                <h4>$1200</h4>
+                <h3>3 - 4 points</h3>
+                <h4>6 Weeks</h4>
               </div>
               <div class="length">
-                <h4>Guided Program</h4>
-                <h5>24 hours</h5>
+                <h4>24 hours</h4>
+                <h5>$1200</h5>
               </div>
               <h4 class="start">GET STARTED TODAY!</h4>
               <div class="select">
                 <a href="tel:+13852817215">
-                  <p>Call to learn more</p>
+                  <p>Learn more</p>
                   <p>(385) 281-7215</p>
                 </a>
               </div>
@@ -321,17 +323,17 @@
             <!-- 8 weeks -->
             <div class="plan-wrapper coming-soon" data-comingSoon="Save $600">
               <div class="title">
-                <h3>8 weeks</h3>
-                <h4>$1400</h4>
+                <h3>4+ points</h3>
+                <h4>8 Weeks</h4>
               </div>
               <div class="length">
-                <h4>Guided Program</h4>
-                <h5>32 hours</h5>
+                <h4>32 hours</h4>
+                <h5>$1400</h5>
               </div>
               <h4 class="start">GET STARTED TODAY!</h4>
               <div class="select">
                 <a href="tel:+13852817215">
-                  <p>Call to learn more</p>
+                  <p>Learn more</p>
                   <p>(385) 281-7215</p>
                 </a>
               </div>
