some analytics stuff

--- a/public/analytics.html
+++ b/public/analytics.html
@@ -69,4 +69,8 @@
       <p><span id="numResults">0</span> results</p>
       <div id="results"></div>
     </main>
+
+    <div id="source-stats">
+      <ul></ul>
+    </div>
   </body>
