--- a/public/free-test-taker.html
+++ b/public/free-test-taker.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header class="nav-start">
-    <a href="index.html" onclick="createAnalyticsEvent({eventID: 'navHomeClicked'})" class="logo">
+    <a href="index.html" class="logo">
       <svg class="logo" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="303 440 496 225" style="enable-background:new 0 0 1080 1080;" xml:space="preserve">
         <g>
           <polygon points="306.24,508.83 306.24,625.38 428.17,612.83 428.17,569.79 351.96,578.76 354.65,457.72 345.26,457.72 "/>
@@ -31,9 +31,9 @@
     <nav>
       <ul>
         <li><a href="#">Free Practice</a></li>
-        <li><a href="why.html" onclick="createAnalyticsEvent({eventID: 'navWhyClicked'})">Why Lyrn</a></li>
-        <!-- <li><a href="team.html" onclick="createAnalyticsEvent({eventID: 'navTeamClicked'})">Our Team</a></li> -->
-        <li><a href="pricing.html" onclick="createAnalyticsEvent({eventID: 'navPricingClicked'})">Pricing</a></li>
+        <li><a href="why.html">Why Lyrn</a></li>
+        <!-- <li><a href="team.html">Our Team</a></li> -->
+        <li><a href="pricing.html">Pricing</a></li>
         <li><div class="phone"><a href="sign-in.html">Sign in</a></div></li>
       </ul>
     </nav>
