--- a/public/pricing.html
+++ b/public/pricing.html
@@ -61,6 +61,7 @@
     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
 
     <script src="Site Templates/generalFunctions.js"></script>
+    <script src="Site Templates/run-analytics.js" defer></script>
     <link rel="stylesheet" href="Site Templates/site-wide.css">
     <script src="pricing.js" defer></script>
 
@@ -74,7 +75,7 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <header class="nav-start">
-      <a href="index.html" onclick="createAnalyticsEvent({eventID: 'navHomeClicked'})" class="logo">
+      <a href="index.html" class="logo">
         <svg class="logo" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="303 440 496 225" style="enable-background:new 0 0 1080 1080;" xml:space="preserve">
           <g>
             <polygon points="306.24,508.83 306.24,625.38 428.17,612.83 428.17,569.79 351.96,578.76 354.65,457.72 345.26,457.72 "/>
@@ -94,9 +95,9 @@
       <input type="checkbox" id="nav-toggle" class="nav-toggle">
       <nav>
         <ul>
-          <li><a href="free-test-taker.html" onclick="createAnalyticsEvent({eventID: 'navFreeClicked'})">Free Practice</a></li>
-          <li><a href="why.html" onclick="createAnalyticsEvent({eventID: 'navWhyClicked'})">Why Lyrn</a></li>
-          <!-- <li><a href="team.html" onclick="createAnalyticsEvent({eventID: 'navTeamClicked'})">Our Team</a></li> -->
+          <li><a href="free-test-taker.html">Free Practice</a></li>
+          <li><a href="why.html">Why Lyrn</a></li>
+          <!-- <li><a href="team.html">Our Team</a></li> -->
           <li><a href="#">Pricing</a></li>
           <li><div class="phone"><a href="sign-in.html">Sign in</a></div></li>
         </ul>
@@ -203,7 +204,7 @@
               </ul>
               <h4 class="start">GET STARTED TODAY!</h4>
               <button class="select">
-                <a href="sign-up.html" onclick="createAnalyticsEvent({eventID: 'signUpClicked'})">
+                <a href="sign-up.html">
                   <p>Sign up now</p>
                 </a>
               </button>
@@ -227,7 +228,7 @@
               </ul>
               <h4 class="start">GET STARTED TODAY!</h4>
               <button class="select">
-                <a href="tel:+13852817215" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
+                <a href="tel:+13852817215">
                   <p>Call to learn more</p>
                   <p>(385) 281-7215</p>
                 </a>
@@ -437,7 +438,7 @@
             </div>
             <h4 class="start">GET STARTED TODAY!</h4>
             <div class="select">
-              <a href="tel:+13852817215" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
+              <a href="tel:+13852817215">
                 <p>Call to learn more</p>
                 <p>(385) 281-7215</p>
               </a>
@@ -471,7 +472,7 @@
               <h4 class="start">GET STARTED TODAY!</h4>
               <button class="select">
                 <div class="select">
-                  <a href="tel:+13852817215" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
+                  <a href="tel:+13852817215">
                     <p>Call to learn more</p>
                     <p>(385) 281-7215</p>
                   </a>
@@ -516,7 +517,7 @@
             </ul>
             <h4 class="start">GET STARTED TODAY!</h4>
             <div class="select">
-              <a href="tel:+13852817215" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
+              <a href="tel:+13852817215">
                 <p>CALL OR TEXT</p>
                 <p>(385) 281-7215</p>
               </a>
