--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -10,6 +10,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-functions.js"></script>
     <script src="Site Templates/site-wide.js"></script>
+    <script src="Site Templates/run-analytics.js"></script>
     <script src="sign-up.js" defer></script>
 
     <script src="Dialog.js"></script>
