--- a/public/free-test-taker.html
+++ b/public/free-test-taker.html
@@ -7,8 +7,9 @@
   <title>Test Taker</title>
   <link rel="stylesheet" href="free-test-taker.css">
   <script src="free-test-taker.js"></script>
+  <script src="Site Templates/run-analytics.js"></script>
 </head>
-<body>
+<body onload="initialSetup()">
   <header class="nav-start">
     <a href="index.html" class="logo">
       <svg class="logo" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="303 440 496 225" style="enable-background:new 0 0 1080 1080;" xml:space="preserve">
