--- a/public/analytics.html
+++ b/public/analytics.html
@@ -68,9 +68,16 @@
 
       <p><span id="numResults">0</span> results</p>
       <div id="results"></div>
+      
+      <div id="source-stats">
+        <h4>Sources</h4>
+        <ul></ul>
+      </div>
+  
+      <div id="marketing-testTaker-stats">
+        <h4>Test Taker</h4>
+        <ul></ul>
+      </div>
     </main>
 
-    <div id="source-stats">
-      <ul></ul>
-    </div>
   </body>
