--- a/public/customer-dashboard.html
+++ b/public/customer-dashboard.html
@@ -50,10 +50,11 @@
         <div class="links">
           <a href="/new-student.html" data-query="student">Student Info</a>
           <a href="/new-parent.html" data-query="parent">Parent Info</a>
-          <a href="/act-sign-up.html" data-query="student,parent">New Program</a>
+          <!-- <a href="/act-sign-up.html" data-query="student,parent">New Program</a> -->
           <a href="/test-taker.html" data-path="student">Test Taker</a>
           <a href="/new-assignment.html" data-query="student">New Assignment</a>
-          <a href="/payment.html" data-query="parent">Payments</a>
+          <a href="/view-curriculum.html">Curriculum</a>
+          <!-- <a href="/payment.html" data-query="parent">Payments</a> -->
         </div>
       </nav>
       <main>
