test taker review details

--- a/public/test-taker.html
+++ b/public/test-taker.html
@@ -190,6 +190,7 @@
         <div class="show-passage">
           <button onclick="showPassageMobile()">Passage</button>
         </div>
+        <div id="questionDetails"></div>
         <div class="background-accent box">Question <span id="questionNumber"></span>
           <input type="checkbox" id="questionFlag" onchange="questionFlagChangeCallback(event)">
           <label for="questionFlag" class="flag">
