updated Student Dash

--- a/public/Dashboard/Student.html
+++ b/public/Dashboard/Student.html
@@ -4,14 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Student Dash</title>
-    <link href="Student.css" rel="stylesheet">
-    <link href="../Site Templates/site-wide.css" rel="stylesheet">
+    <link href="/styles/Student.css" rel="stylesheet">
 
-    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
-
-    <script src="../Site Templates/site-wide.js"></script>
-    <script src="Student.js"></script>
+    <script src="/scripts/Student.js"></script>
 
   </head>
 
