--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -19,7 +19,7 @@
         <button class="button" onclick="signOut()">Sign Out</button>
       </div>
 
-      <div class="flex-row align-center">
+      <div class="buttons">
         <button class="button" onclick="window.location.href='../new-parent.html'">New Parent</button>
         <button class="button" onclick="window.location.href='../new-student.html'">New Student</button>
         <button class="button" onclick="window.location.href='../new-tutor.html'">New Tutor</button>
