--- a/public/sign-in.html
+++ b/public/sign-in.html
@@ -32,7 +32,7 @@
             <h1>Sign in</h1>
             <br>
             <label for="email">Email</label>
-            <input type="email" name="email" id="email" required>
+            <input type="email" name="email" id="email" required autofocus>
             <div class="password-label">
               <label for="password">Password</label>
               <label class="forgot">Forgot your password?</label>
