--- a/public/new-assignment.html
+++ b/public/new-assignment.html
@@ -157,6 +157,27 @@
 
       </section>
     </main>
+
+    <h2 style="margin-left: 1em;">Notes</h2>
+    <main class="notes">
+      <div class="notes-wrapper">
+        <label for="English_notes">English</label>
+        <textarea name="notes" id="English_notes" cols="30" rows="10"></textarea>
+      </div>
+      <div class="notes-wrapper">
+        <label for="Math_notes">Math</label>
+        <textarea name="notes" id="Math_notes" cols="30" rows="10"></textarea>
+      </div>
+      <div class="notes-wrapper">
+        <label for="Reading_notes">Reading</label>
+        <textarea name="notes" id="Reading_notes" cols="30" rows="10"></textarea>
+      </div>
+      <div class="notes-wrapper">
+        <label for="Science_notes">Science</label>
+        <textarea name="notes" id="Science_notes" cols="30" rows="10"></textarea>
+      </div>
+    </main>
+
     <h2 style="margin-left: 1em;">Instructions</h2>
     <main class="instructions">
       <section class="assignments">
