--- a/public/new-tutor.html
+++ b/public/new-tutor.html
@@ -15,47 +15,19 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 
-
     <link href="styles/new-tutor.css" rel="stylesheet">
-    <link href="Site Templates/site-wide.css" rel="stylesheet">
-
-    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-functions.js"></script>
-
-    <script src="Site Templates/site-wide.js"></script>
-    <script src="Site Templates/formatting.js" defer></script>
-    <script src="Site Templates/generalFunctions.js" defer></script>
-    <script src="new-tutor.js" defer></script>
+    <script src="scripts/new-tutor.js"></script>
   </head>
 
-
-  <body onload="initialSetup()">
+  <body>
     <h1 id="title">Tutor</h1>
     <div id="pageLoading"></div>
-    <label for="location">Location</label>
-    <div class="loading-wrapper">
-      <select name="location" id="location" required onchange="locationCallback(this)">
-        <option value="" disabled selected>select a location</option>
-      </select>
-    </div>
     <label for="firstName">First Name</label>
     <input type="text" name="firstName" id="firstName" required>
     <label for="lastName">Last Name</label>
     <input type="text" name="lastName" id="lastName" required>
     <label for="email">Email</label>
     <input type="email" name="email" id="email" required>
-    <label for="phoneNumber">Phone Number</label>
-    <input type="tel" name="phoneNumber" id="phoneNumber" required>
-    <label for="wage">Wage</label>
-    <input type="num" name="wage" id="wage" required>
-    <label for="qualifications">Qualifications</label>
-    <div class="loading-wrapper">
-      <select name="qualifications" id="qualifications" class="ui dropdown search" multiple>
-      </select>
-    </div>
     <p class="error">error message</p>
     <button id="action"><div class="loading-wrapper loading">Loading</div></button>
   </body>
