--- a/public/student-overview.html
+++ b/public/student-overview.html
@@ -13,7 +13,7 @@
   <body>
     <div class="dashboard">
       <nav>
-        <a class="logo" onclick="goToDashboard()" style="cursor: pointer;">
+        <a class="logo" onclick="goHome()" style="cursor: pointer;">
           <svg class="logo" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="303 440 496 225" style="enable-background:new 0 0 1080 1080;" xml:space="preserve">
             <g>
               <polygon points="306.24,508.83 306.24,625.38 428.17,612.83 428.17,569.79 351.96,578.76 354.65,457.72 345.26,457.72 "/>
@@ -28,13 +28,11 @@
           </svg>
         </a>
         <div class="links">
-          <a href="/new-student.html" data-query="student">Student Info</a>
-          <a href="/new-parent.html" data-query="parent">Parent Info</a>
-          <!-- <a href="/act-sign-up.html" data-query="student,parent">New Program</a> -->
-          <a href="/test-taker.html" data-path="student">Test Taker</a>
-          <a href="/new-assignment.html" data-query="student">New Assignment</a>
-          <a href="/view-curriculum.html">Curriculum</a>
-          <!-- <a href="/payment.html" data-query="parent">Payments</a> -->
+          <a href="/new-student.html" data-query="student" data-role="dev,admin">Student Info</a>
+          <a href="/new-parent.html" data-query="parent" data-role="dev,admin">Parent Info</a>
+          <a href="/test-taker.html" data-path="student" data-role="dev,admin,tutor">Test Taker</a>
+          <a href="/new-assignment.html" data-query="student" data-role="dev,admin,tutor">New Assignment</a>
+          <a href="/view-curriculum.html" data-role="dev,admin,tutor">Curriculum</a>
         </div>
       </nav>
       <main>
