details for previous assignments

--- a/public/test-taker.html
+++ b/public/test-taker.html
@@ -117,18 +117,30 @@
         <h3>Previous Assignments</h3>
         <!-- <div class="assignment box default-background" id="noPreviousAssignments">No previous assignments.</div> -->
         <div id="previousAssignments" class="assignment-wrapper">
-          <div class="english-container">
-            <!-- <h4>English</h4> -->
-          </div>
-          <div class="math-container">
-            <!-- <h4>Math</h4> -->
-          </div>
-          <div class="reading-container">
-            <!-- <h4>Reading</h4> -->
-          </div>
-          <div class="science-container">
-            <!-- <h4>Science</h4> -->
-          </div>
+          <details>
+            <summary class="english-color">english</summary>
+            <div class="english-container">
+              <!-- <h4>English</h4> -->
+            </div>
+          </details>
+          <details>
+            <summary class="math-color">math</summary>
+            <div class="math-container">
+              <!-- <h4>Math</h4> -->
+            </div>
+          </details>
+          <details>
+            <summary class="reading-color">reading</summary>
+            <div class="reading-container">
+              <!-- <h4>Reading</h4> -->
+            </div>
+          </details>
+          <details>
+            <summary class="science-color">science</summary>
+            <div class="science-container">
+              <!-- <h4>Science</h4> -->
+            </div>
+          </details>
         </div>
       </div>
 
