--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -4,20 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sign Up</title>
-
-    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-functions.js"></script>
-    <script src="Site Templates/site-wide.js"></script>
-    <script src="Site Templates/run-analytics.js"></script>
-    <script src="sign-up.js" defer></script>
-
-    <script src="Dialog.js"></script>
-
     <link href="styles/sign-up.css" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="Site Templates/site-wide.css"> -->
     <link rel="stylesheet" href="https://use.typekit.net/ibd0auf.css">
+    
+    <script src="scripts/sign-up.js"></script>
   </head>
 
   <body>
