--- a/public/student-overview.html
+++ b/public/student-overview.html
@@ -31,6 +31,7 @@
           <a href="/new-student.html" data-query="student" data-role="dev,admin">Student Info</a>
           <a href="/new-parent.html" data-query="parent" data-role="dev,admin">Parent Info</a>
           <a href="/test-taker.html" data-path="student" data-role="dev,admin,tutor">Test Taker</a>
+          <a href="/test-taker.html?mode=marketing" data-path="student" data-role="dev,admin,tutor">Full Tests</a>
           <a href="/new-assignment.html" data-query="student" data-role="dev,admin,tutor">New Assignment</a>
           <a href="/view-curriculum.html" data-role="dev,admin,tutor">Curriculum</a>
         </div>
