Tutor personal options

--- a/public/Dashboard/Tutor.html
+++ b/public/Dashboard/Tutor.html
@@ -19,6 +19,13 @@
         <button class="button" onclick="signOut()">Sign Out</button>
       </div>
 
+      <div class="buttons">
+        <button class="button" onclick="goToTestTaker()">My Test Taker</button>
+        <!-- <button class="button" onclick="goToFullTests()">My Full Tests</button> -->
+        <button class="button" onclick="goToNewAssignment()">My Assignments</button>
+        <button class="button" onclick="window.location.href = '/view-curriculum.html'">Curriculum</button>
+      </div>
+
       <h2>Users</h2>
       <dropdown-search id="userSearch"></dropdown-search>
     </section>
