self-guided coming soon

--- a/public/Dashboard/Student.html
+++ b/public/Dashboard/Student.html
@@ -23,9 +23,9 @@
         <a class="free bubble">
           <h2>Take 2 full length practice tests absolutely free!</h2>
         </a>
-        <a class="self bubble">
+        <a class="self bubble coming-soon">
           <h2>Self Guided</h2>
-          <p>Prepare at your own pace with our full curriculum and over 900 practice questions.</p>
+          <p>Prepare at your own pace with our full curriculum.</p>
         </a>
         <a class="tutor bubble">
           <h2>On-on-One Tutoring</h2>
