--- a/public/new-assignment.html
+++ b/public/new-assignment.html
@@ -255,17 +255,10 @@
             <li>You should now see the list of topics for that section ordered by frequency</li>
             <li>Check the desired topics (verify these are the only topic checked)</li>
             <li>Set the desired topics' weights to their given frequency</li>
-            <li>Set the "Number of Questions" appropriatley based on section:
-              <ul>
-                <li>English - 10 per topic</li>
-                <li>Math - 10 per topic</li>
-                <li>Reading - 30</li>
-                <li>Science - 10 per topic</li>
-              </ul>
-            </li>
+            <li>Set the "Number of Questions" to blank</li>
             <li>Set the "Open" time to tomorrow at midnight</li>
-            <li>Set the "Close" time to 2 days after open at midnight</li>
-            <li>Set the "Time" to blank</li>
+            <li>Set the "Close" time to 1 week after open at midnight</li>
+            <li>Set the "Time" to 15 minutes</li>
             <li>Select "Daily" for the topic</li>
             <li>Submit the assignment</li>
             <li>Verify that the assignment was successfully saved on the test taker</li>
@@ -277,7 +270,7 @@
           <p>
             These assignments are the second at home asssignment the student will complete after each session.
             They will be assigned to be done a week after a session as a review of material a week after.
-            The topics are chosen as the top 10 topics based on score.
+            The topics are chosen as all topics taught up to this point.
           </p>
           <p>How to create</p>
           <ul>
@@ -290,15 +283,8 @@
             <li>Set the desired topics' weights to their given frequency</li>
             <li>Set the "Number of Questions" to blank</li>
             <li>Set the "Open" time to a week from yesterday at midnight</li>
-            <li>Set the "Close" time to 2 days after open at midnight</li>
-            <li>Set the "Time" appropriatley based on section:
-              <ul>
-                <li>English - 45</li>
-                <li>Math - 60</li>
-                <li>Reading - 35</li>
-                <li>Science - 35</li>
-              </ul>
-            </li>
+            <li>Set the "Close" time to 1 week after open at midnight</li>
+            <li>Set the "Time" to 30</li>
             <li>Select "Homework" for the topic</li>
             <li>Submit the assignment</li>
             <li>Verify that the assignment was successfully saved on the test taker</li>
