--- a/public/new-assignment.html
+++ b/public/new-assignment.html
@@ -33,6 +33,13 @@
     </details>
 
     <a id="testTakerLink" target="_blank" style="margin-left: 2em;"></a>
+    <main id="estimatedScores">
+      <h2>Estimated Scores</h2>
+      <p >English: <span id="english-estimate"></span></p>
+      <p>Math: <span id="math-estimate"></span></p>
+      <p>Reading: <span id="reading-estimate"></span></p>
+      <p>Science: <span id="science-estimate"></span></p>
+    </main>
     <main>
       <section id="assignment">
         <h2>Assignments</h2>
