debug info helpers

--- a/public/test-taker.html
+++ b/public/test-taker.html
@@ -209,6 +209,7 @@
         <div class="circle"><div class="left-arrow"></div></div>
         <h1>Previous</h1>
       </div>
+      <p id="debugInfo" onclick="showDebugInfo()" style="display: none; cursor: pointer;">Debug</p>
       <div class="nav hide" id="nextBtn" onclick="nextQuestionCallback()">
         <h1>Next</h1>
         <div class="circle"><div class="right-arrow"></div></div>
